# Acumulados_Chuvas

./: .gitignore  README.md  app.py  municipiosES.py  pyproject.toml  requirements.txt
.github/workflows/: validacao.yml
app/: codEstacoes.py  data.py  dataCollector.py  main.py  municipiosES.py  render_header_footer.py  teste.py  ui.py  utils.py  weather.py
app/config/: __init__.py  settings.py
app/services/: __init__.py  estacoes.py  fonte_status.py  normalizacao.py  snapshots.py
data/: stations_satdes.json
pages/: 1_Tabela.py
tests/: test_collectors.py  test_import_app.py  test_joiner.py  test_normalizacao.py
